added user for buildman and enabled it su without password

--- a/openwrt_buildroot/Dockerfile
+++ b/openwrt_buildroot/Dockerfile
@@ -9,9 +9,17 @@ MAINTAINER	njhsi
 
 # gettext for envsubst
 RUN		apt-get update && \
-			apt-get install -yq git-core build-essential libssl-dev libncurses5-dev unzip gawk && \
-			apt-get clean && \
-			useradd -m openwrt && \
-			echo 'openwrt ALL=NOPASSWD: ALL' > /etc/sudoers.d/openwrt 
+			apt-get install -yq git-core build-essential libssl-dev libncurses5-dev unzip gawk \
+			zlib1g-dev flex gettext wget subversion file python2.7-dev automake bison patchelf findutils \
+			sudo && \
+			apt-get clean 
+
+RUN mkdir /openwrt
+RUN adduser --disabled-password --gecos '' --shell /bin/bash --home /openwrt buildman
+RUN adduser buildman sudo
+RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+
+USER buildman
+WORKDIR /openwrt
 
 #ENTRYPOINT      ["/setup.sh"]
